# routes/info.js
@@ -3,7 +3,7 @@ const middleware = require("../middleware/middleware");
 const controller = require("../controllers");
 const router = express.Router();
 
-router.get("/",  middleware.checkAuth, middleware.checkRole("view"), controller.info.getVersion);
+router.get("/version",  middleware.checkAuth, middleware.checkRole("view"), controller.info.getVersion);
 
 
 module.exports = router;
